tests/ui/impl-trait/issues/issue-99073.stderr
error[E0792]: expected generic type parameter, found `&F`
  --> $DIR/issue-99073.rs:6:13
   |
LL | fn fix<F: Fn(G), G: Fn()>(f: F) -> impl Fn() {
   |        - this generic parameter must be used with a generic type parameter
LL |   move || f(fix(&f))
   |             ^^^^^^^

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0792`.
